--- a/b5_ac_conect/scss/_styles_access.scss
+++ b/b5_ac_conect/scss/_styles_access.scss
@@ -161,3 +161,8 @@ footer .social-link:hover {
         font-weight: 700;
     }
 }
+
+.navbar-brand .site-logo {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
